objects/MessagingSession.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Messaging Sessions</relationshipLabel>
        <relationshipName>Messaging_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Messaging Sessions</relationshipLabel>
        <relationshipName>Messaging_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_LiveMessagingChannel__c</fullName>
        <description>JD - 10/4/22 - Channel formula adds visual aid to show users quickly what type of message this was connected to.</description>
        <formula>IMAGE(CASE(MessagingChannel.MessageType,
&quot;Facebook&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/facebook.png&quot;,
&quot;Text&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/sms.png&quot;,
&quot;Embedded Messaging&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/embeddedmessaging.png&quot;,

&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/phone_else_.png&quot;),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_LiveMessaging_Subject__c</fullName>
        <description>JD - 10/4/22 - Subject connects to Case to bring in related Case information to quickly enhance and support reports</description>
        <formula>IF(ISPICKVAL( SDO_MessagingSession_BotName__c, &quot;Buyer Assistant&quot;),
 MessagingEndUser.Name &amp; &quot; | Buyer Assistant Bot Sales Inquiry&quot;,
    BLANKVALUE(Case.Subject, &apos;Support &apos; + TEXT(MessagingChannel.MessageType) + &apos; Conversation&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MessagingSession_BotName__c</fullName>
        <description>JD - Used to assist in reporting and other logic related to messaging sessions based on Bot</description>
        <label>Bot Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Luna</fullName>
                </value>
                <value>
                    <fullName>Buyer Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ABC_Bank_Service_Team_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>ABC Bank Service Team</label>
        <queue>ABC_Bank_Service_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDO_Service_LiveMessage_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>SMS</label>
        <queue>SDO_Service_LiveMessage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDO_Service_Messaging_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Messaging</label>
        <queue>SDO_Service_Messaging</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>